# SchemaRAG-dify-plugin

./: .gitignore  CLAUDE.md  README.md  README_CN.md  RELEASE_NOTES.md  UPDATE.md  USAGE.md  config.py  main.py  manifest.yaml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: plugin-publish.yml  publish.yml  release-attach-difypkg.yml
core/dify/: dify_client.py
core/llm_plot/: README.md  __init__.py  chart_generator.py  config.py  data_processor.py  models.py  (+2 more)
demo/: text2sql-workflow.yml
docs/: CACHE_OPTIMIZATION_GUIDE.md  CONTEXT_MEMORY_GUIDE.md  DATABASE_SUPPORT_UPDATE.md  GITHUB_INSTALL_PLUGIN.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_SIGNING.md  PUBLISH_DIFY_PLUGINS.md  SQL_REFINER_GUIDE.md  SQL_REFINER_IMPLEMENTATION.md  TRADUCAO_ATENCAO.md
prompt/: sql_refiner_prompt.py  summary_prompt.py  text2sql_prompt.py
provider/: __init__.py  build_lm_db_schema_rag.py  build_schema_rag.py  provider.yaml
scripts/: package-and-sign.sh
service/: __init__.py  database_service.py  dify_service.py  knowledge_service.py  network_service.py  schema_builder.py  sql_refiner.py
test/: test_basic_chart.py  test_chinese_fonts.py  test_context_manager.py  test_database_support.py  test_multiple_dataset_support.py  test_sql_refiner.py  test_validation_logic.py
tools/: __init__.py  data_summary.py  data_summary.yaml  llm_plot.py  llm_plot.yaml  parameter_validator.py  schema_kb_build.py  schema_kb_build.yaml  sql_executer.py  sql_executer.yaml  sql_executer_cust.py  sql_executer_cust.yaml  text2data.py  text2data.yaml  text2sql.py  text2sql.yaml  tool_messages.py
(+15 files in other folders)
