[project]
name = "lm-db-schema-rag"
version = "0.2.2"
description = "LM DB Schema RAG — database schema for RAG in Dify dataset"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dify-plugin",
    "sqlalchemy",
    "pymysql",
    "psycopg2-binary",
    "httpx",
    "dify-client",
    "pandas>=2.3.1",
    "tabulate>=0.9.0",
    # Extra database drivers
    "pymssql",
    "oracledb",
    "pytest>=8.4.1",
    "dmpython>=2.5.22",
    "dmsqlalchemy>=2.0.0",  # Dameng SQLAlchemy dialect adapter
    "psycopg2>=2.9.10",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools", "service", "core", "provider"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]
